--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="notes__sidebar">
-            <button class="notes__add" type="button">Add Note</button>
+            <button class="notes__add" type="button"><a href="addnote.html"class="notes__edit-text">Add Note</a></button>
             <div class="notes__list">
                 <div class="notes__list-item notes__list-item--selected">
                     <div class="notes__box-title">Cooking Reminder</div>
