made class for save and delete buttons

--- a/frontend/src/addnote.html
+++ b/frontend/src/addnote.html
@@ -13,8 +13,8 @@
             <input class="notes__title" type="text" placeholder="Enter a title...">
             <textarea class="notes__body" placeholder="Enter text here..."></textarea>
             <div class="notes__actions">
-                <button class="notes__edit" type="button"><a href="landing.html" class="notes__edit-text">Save Note</a></button>
-                <button class="notes__delete" type="button">Delete Note</button>
+                <button class="notes__edit" type="button"><a href="landing.html" class="notes__buttons-text">Save Note</a></button>
+                <button class="notes__delete" type="button"><a href="landing.html" class="notes__buttons-text">Delete Note</a></button>
             </div>
         </div>
     </div>
