Made landing page responsive and added a search bar

--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <div class="notes" id="app">
+        <button class="notes__toggle-sidebar" type="button" onclick="toggleSidebar()">☰</button>
         <div class="notes__preview">
-            <input class="notes__title" type="text" placeholder="Enter a title...">
-            <textarea class="notes__body" placeholder="Enter text here..."></textarea>
+            <input class="notes__title" type="text" placeholder="Welcome to Online Notes">
+            <textarea class="notes__body" placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
             <div class="notes__actions">
                 <button class="notes__edit" type="button">Save Note</button>
                 <button class="notes__delete" type="button">Delete Note</button>
             </div>
         </div>
         <div class="notes__sidebar">
-            <button class="notes__add" type="button">Add Note</button>
+            <button class="notes__add" type="button"><a href="addnote.html"class="notes__buttons-text">+ Add Note</a></button>
+            <input class="notes__search-bar" type="text" placeholder="   Search in Notes...">
             <div class="notes__list">
                 <div class="notes__list-item notes__list-item--selected">
                     <div class="notes__box-title">Cooking Reminder</div>
@@ -30,8 +32,19 @@
                     <div class="notes__box-body">Writing up notes for today's math lesson.</div>
                     <div class="notes__box-updated">Wednesday 10:50pm</div>
                 </div>
+                <div class="notes__list-item notes__list-item--selected">
+                    <div class="notes__box-title">Tomorrow's Chores</div>
+                    <div class="notes__box-body">Doing Laundry, Vaccum the floors, Clean Dishes...</div>
+                    <div class="notes__box-updated">Monday 9:00am</div>
+                </div>
             </div>
         </div>
     </div>
+    <script>
+        function toggleSidebar() {
+            const sidebar = document.querySelector('.notes__sidebar');
+            sidebar.classList.toggle('visible');
+        }
+    </script>
 </body>
 </html>
