--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -14,8 +14,8 @@
             <input class="notes__title" type="text" placeholder="Welcome to Online Notes">
             <textarea class="notes__body" placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
             <div class="notes__actions">
-                <button class="notes__edit" type="button">Save Note</button>
-                <button class="notes__delete" type="button">Delete Note</button>
+                <button class="notes__edit" type="button" onclick="saveNote()">Save Note</button>
+                <button class="notes__delete" type="button" onclick="deleteNote()">Delete Note</button>
             </div>
         </div>
         <div class="notes__sidebar">
@@ -40,11 +40,7 @@
             </div>
         </div>
     </div>
-    <script>
-        function toggleSidebar() {
-            const sidebar = document.querySelector('.notes__sidebar');
-            sidebar.classList.toggle('visible');
-        }
-    </script>
+    <div id="toast" class="toast">Save Successful</div>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
