--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -15,7 +15,7 @@
             <textarea class="notes__body" placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
             <div class="notes__actions">
                 <button class="notes__edit" type="button" onclick="saveNote()">Save Note</button>
-                <button class="notes__delete" type="button" onclick="deleteNote()">Delete Note</button>
+                <button class="notes__delete" id="openModalBtn" type="button" onclick="deleteNote()">Delete Note</button>
             </div>
         </div>
         <div class="notes__sidebar">
@@ -41,6 +41,22 @@
         </div>
     </div>
     <div id="toast" class="toast">Save Successful</div>
+
+    <div class="notes__modal-container">
+        <div id="myModal" class="notes__modal">
+            <div class="notes__modal-content">
+                <span class="notes__modal-exit" id="closeModalBtn">&times;</span>
+                <div class="notes__container">
+                    <p>Are you sure you want to delete this note?</p>
+                    <div class="notes__modal-buttons">
+                        <button class="notes__modal-yes" id="confirmDeleteBtn">Yes</button>
+                        <button class="notes__modal-no" id="cancelDeleteBtn">No</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="scripts/index.js"></script>
 </body>
 </html>
