fixed issue with toast notification to work with the delete confirmation modal

--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -14,7 +14,7 @@
             <input class="notes__title" type="text" placeholder="Welcome to Online Notes">
             <textarea class="notes__body" placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
             <div class="notes__actions">
-                <button class="notes__edit" type="button" onclick="saveNote()">Save Note</button>
+                <button class="notes__edit" id="saveBtn" type="button" onclick="saveNote()">Save Note</button>
                 <button class="notes__delete" id="openModalBtn" type="button" onclick="deleteNote()">Delete Note</button>
             </div>
         </div>
