--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes Application</title>
-    <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <div class="notes" id="app">
@@ -40,6 +40,7 @@
             </div>
         </div>
     </div>
+
     <div id="toast" class="toast">Save Successful</div>
 
     <div class="notes__modal-container">
@@ -57,6 +58,6 @@
         </div>
     </div>
     
-    <script src="scripts/index.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
