--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="notes__sidebar">
-            <button class="notes__add" type="button"><a href="addnote.html"class="notes__buttons-text">+ Add Note</a></button>
+            <button class="notes__add" type="button"><a href="/frontend/src/pages/addnote/addnote.html"class="notes__buttons-text">+ Add Note</a></button>
             <input class="notes__search-bar" type="text" placeholder="   Search in Notes...">
             <div class="notes__list">
                 <div class="notes__list-item notes__list-item--selected">
