--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,23 @@
     <title>Notes Application</title>
     <link rel="stylesheet" href="home.css">
 </head>
+
 <body>
     <div class="notes" id="app">
         <button class="notes__toggle-sidebar" type="button" onclick="toggleSidebar()">☰</button>
         <div class="notes__preview">
-            <input class="notes__title" type="text" placeholder="Welcome to Online Notes">
-            <textarea class="notes__body" placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
+            <input class="notes__title" id="notesTitle" type="text" placeholder="Welcome to Online Notes">
+            <textarea class="notes__body" id="notesBody"
+                placeholder="Select 'Add' to create a blank note or one of the existing notes to get started"></textarea>
             <div class="notes__actions">
                 <button class="notes__edit" id="saveBtn" type="button" onclick="saveNote()">Save Note</button>
-                <button class="notes__delete" id="openModalBtn" type="button" onclick="deleteNote()">Delete Note</button>
+                <button class="notes__delete" id="openModalBtn" type="button" onclick="deleteNote()">Delete
+                    Note</button>
             </div>
         </div>
         <div class="notes__sidebar">
-            <button class="notes__add" type="button"><a href="/addnote/addnote.html"class="notes__buttons-text">+ Add Note</a></button>
+            <button class="notes__add" type="button"><a href="/addnote/addnote.html" class="notes__buttons-text">+ Add
+                    Note</a></button>
             <input class="notes__search-bar" type="text" placeholder="   Search in Notes...">
             <div class="notes__list" id="notesList">
             </div>
@@ -42,7 +47,8 @@
             </div>
         </div>
     </div>
-    
+
     <script src="home.js"></script>
 </body>
+
 </html>
