--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -25,7 +25,7 @@
         <div class="notes__sidebar">
             <button class="notes__add" type="button"><a href="/addnote/addnote.html" class="notes__buttons-text">+ Add
                     Note</a></button>
-            <input class="notes__search-bar" type="text" placeholder="   Search in Notes...">
+            <input class="notes__search-bar" id="notesSearchBar" type="text" placeholder="   Search in Notes...">
             <div class="notes__list" id="notesList">
             </div>
         </div>
