--- a/frontend/src/pages/addnote/addnote.html
+++ b/frontend/src/pages/addnote/addnote.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="addnote.css">
 </head>
 <body>
+    <!---- Main Area ---->
     <div class="notes" id="app">
         <div class="notes__preview">
             <input class="notes__title" id="noteTitle" type="text" placeholder="Enter a title..." maxlength="50" required>
@@ -19,6 +20,7 @@
         </div>
     </div>
 
+    <!---- Delete Modal ---->
     <div class="notes__modal-container">
         <div id="myModal" class="notes__modal">
             <div class="notes__modal-content">
@@ -34,8 +36,10 @@
         </div>
     </div>
 
+    <!---- Toast Notifications  ---->
     <div id="toast" class="toast"></div>
 
+    <!---- Javascript ---->
     <script src="addnote.js"></script>
 </body>
 </html>
