--- a/frontend/src/pages/login/login.html
+++ b/frontend/src/pages/login/login.html
@@ -7,6 +7,7 @@
     <title>Log In | Online Notes</title>
 </head>
 <body>
+    <!---- Login ---->
     <div class="login-container">
         <h2>Login</h2>
         <form action="/login" method="post">
