--- a/frontend/src/pages/signup/signup.html
+++ b/frontend/src/pages/signup/signup.html
@@ -10,14 +10,14 @@
     <!---- Sign Up ---->
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form action="/signup" method="post">
+        <form action="/api/auth/signup" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="email">Email:</label> 
+            <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <p>Dont have an account. <a href="#">Sign Up!</a></p>
+            <p>Already have an account? <a href="/frontend/src/pages/login/login.html">Login!</a></p>
             <input type="submit" value="Sign Up">
         </form>
     </div>
