big work on signup, login, home and server.js

--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <!---- Navigation Bar ---->
+    <nav class="navbar">
+        <div class="navbar__brand">Online Notes</div>
+        <ul class="navbar__menu">
+            <li class="navbar__item navbar__item--auth">
+                <a href="/signup/signup.html" id="signUpLink" class="navbar__auth-link">Sign Up</a>
+            </li>
+            <li class="navbar__item navbar__item--auth">
+                <a href="/login/login.html" id="loginLink" class="navbar__auth-link">Login</a>
+            </li>
+        </ul>
+    </nav>
 
     <!---- Main Area ---->
     <div class="notes" id="app">
