--- a/frontend/src/pages/signup/signup.html
+++ b/frontend/src/pages/signup/signup.html
@@ -10,16 +10,22 @@
     <!---- Sign Up ---->
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form action="/api/auth/signup" method="post">
+        <form id="signupForm" action="/api/auth/signup" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label> 
             <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <p>Already have an account? <a href="/frontend/src/pages/login/login.html">Login!</a></p>
+            <p>Already have an account? <a href="/login/login.html">Login!</a></p>
             <input type="submit" value="Sign Up">
         </form>
     </div>
+    
+    <!--- Toast Notifications ---->
+    <div id="toast" class="toast"></div>
+
+    <!---- Javascript ---->
+    <script src="signup.js"></script>
 </body>
 </html>
