fixed typo, added toast

--- a/frontend/src/pages/login/login.html
+++ b/frontend/src/pages/login/login.html
@@ -20,6 +20,9 @@
         </form>
     </div>
 
+    <!--- Toast Notifications ---->
+    <div id="toast" class="toast"></div>
+
     <!---- Javascript ---->
     <script src="login.js"></script>
 </body>
